--- a/studio/public/agent_studio_css/simple_research_assistant_flows_included_cards.css
+++ b/studio/public/agent_studio_css/simple_research_assistant_flows_included_cards.css
@@ -1,4 +1,4 @@
-/*! CSS Used from: https://vanij.adya.ai/assets/index-D-nUQaOA.css */
+/*! CSS Used from: https://vanij.adya.ai/assets/index-BM0a5d4U.css */
 .pointer-events-none {
     pointer-events: none !important;
 }
@@ -38,8 +38,8 @@
 .flex-1 {
     flex: 1 1 0% !important;
 }
-.cursor-pointer {
-    cursor: pointer !important;
+.cursor-not-allowed {
+    cursor: not-allowed !important;
 }
 .grid-cols-\[repeat\(auto-fill\,minmax\(17rem\,1fr\)\)\] {
     grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr)) !important;
@@ -123,6 +123,15 @@
 }
 .text-muted-foreground {
     color: hsl(var(--muted-foreground)) !important;
+}
+.opacity-50 {
+    opacity: 0.5 !important;
+}
+.shadow-none {
+    --tw-shadow: 0 0 #0000 !important;
+    --tw-shadow-colored: 0 0 #0000 !important;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 .transition-all {
     transition-property: all !important;
